--- a/src/assets/CSS/style.scss
+++ b/src/assets/CSS/style.scss
@@ -19,9 +19,16 @@ $fg: hsl($hue, 10%, 10%);
       border-top-color: $Text_color_3;
     }
   }
+
   .tooltip-inner {
     background-color: $Text_color_3;
   }
+}
+
+.ct-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* -------------------------------- Color Variable End -------------------------------- */
@@ -40,6 +47,7 @@ $fg: hsl($hue, 10%, 10%);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: $Bg_Dark_color_4;
 }
+
 html,
 body {
   scroll-behavior: smooth;
@@ -53,15 +61,18 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
   .pl {
     display: block;
     width: 70px;
     height: 70px;
   }
+
   .pl__ring,
   .pl__ball {
     animation: ring 2s ease-out infinite;
   }
+
   .pl__ball {
     animation-name: ball;
   }
@@ -78,32 +89,40 @@ body {
     from {
       stroke-dasharray: 0 257 0 0 1 0 0 258;
     }
+
     25% {
       stroke-dasharray: 0 0 0 0 257 0 258 0;
     }
+
     50%,
     to {
       stroke-dasharray: 0 0 0 0 0 515 0 0;
     }
   }
+
   @keyframes ball {
+
     from,
     50% {
       animation-timing-function: ease-in;
       stroke-dashoffset: 1;
     }
+
     64% {
       animation-timing-function: ease-in;
       stroke-dashoffset: -109;
     }
+
     78% {
       animation-timing-function: ease-in;
       stroke-dashoffset: -145;
     }
+
     92% {
       animation-timing-function: ease-in;
       stroke-dashoffset: -157;
     }
+
     57%,
     71%,
     85%,
@@ -128,6 +147,7 @@ html {
     text-decoration: none;
   }
 }
+
 html {
   a {
     &:hover {
@@ -142,6 +162,7 @@ img {
   height: auto;
   width: auto;
 }
+
 html {
   .container {
     max-width: 1440px;
@@ -152,6 +173,7 @@ html {
 p {
   margin-bottom: 0px;
 }
+
 p {
   &:last-child {
     margin-bottom: 0;
@@ -166,16 +188,19 @@ b,
 strong {
   font-weight: 600;
 }
+
 button {
   &:focus {
     box-shadow: none;
   }
 }
+
 .ct-list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
+
 body {
   background-color: $Bg_Dark_color;
   color: $White_color;
@@ -186,38 +211,49 @@ body {
 .main-pr-inner-box {
   min-height: 100dvh;
 }
+
 .main-profile-section {
   width: 305px;
   height: 100dvh;
   overflow-y: auto;
 }
+
 .main-box-section {
   width: calc(100% - 413px);
   background-color: $Bg_Dark_color_2;
+
   .main-box-inner-section {
     padding: 28px;
     height: 100dvh;
-    overflow-y: auto;
-    > div {
+
+    .MainBox-main-section {
       height: 100%;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
   }
 }
+
 .header-main-section {
   width: 108px;
 }
+
 .main-header-inner-section {
   height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
+
   .main-header-box {
     padding: 20px;
+
     ul {
       gap: 43px;
+
       li {
         width: 100%;
         text-align: center;
+
         a {
           background-color: $Bg_Dark_color_3;
           width: 45px;
@@ -228,17 +264,21 @@ body {
           border-radius: 50%;
           margin: 0 auto;
           transition: all 0.6s ease;
+
           svg {
             width: 20px;
             color: $Bg_Dark_color;
             transition: all 0.6s ease;
+
             path {
               stroke: currentColor;
             }
           }
+
           &:hover,
           &.active {
             background-color: $Second_color;
+
             svg {
               color: $White_color;
             }
@@ -254,7 +294,18 @@ body {
 
 .main-profile-inner-section {
   padding: 58px 37px;
+
+  .ProfileDetails-main-slider {
+    position: relative;
+
+    .ProfileDetails-main-slider-top {
+      height: calc(100dvh - 182px);
+      overflow: auto;
+      padding-right: 5px;
+    }
+  }
 }
+
 .profile-pic-inner-section {
   .profile-pic {
     width: 150px;
@@ -265,6 +316,7 @@ body {
     overflow: hidden;
     margin-bottom: 31px;
   }
+
   h3 {
     text-transform: capitalize;
     font-weight: 500;
@@ -272,18 +324,21 @@ body {
     line-height: 123.6%;
     margin-bottom: 15px;
   }
+
   p {
     font-weight: 400;
     font-size: 15px;
     line-height: 24px;
     text-transform: capitalize;
-    font-feature-settings: "calt" off, "kern" off;
+    font-feature-settings: "calt"off, "kern"off;
     color: $Text_color_2;
   }
+
   ul {
     gap: 15px;
     padding: 15px 0;
     padding-bottom: 25px;
+
     li {
       a {
         width: 32px;
@@ -295,9 +350,11 @@ body {
         color: $Text_color_3;
         align-items: center;
         justify-content: center;
+
         svg {
           width: 16px;
         }
+
         &:hover {
           background-color: transparent;
           color: $Second_color;
@@ -306,10 +363,13 @@ body {
     }
   }
 }
+
 .profile-det {
   padding: 25px 0;
+
   li {
     margin-bottom: 9px;
+
     span {
       background-color: $Second_color;
       padding: 1px 5px;
@@ -317,27 +377,32 @@ body {
       font-size: 15px;
       line-height: 24px;
       text-transform: capitalize;
-      font-feature-settings: "calt" off, "kern" off;
+      font-feature-settings: "calt"off, "kern"off;
       color: $Text_color_3;
     }
+
     p {
       font-weight: 400;
       font-size: 15px;
       line-height: 24px;
       text-align: right;
       text-transform: capitalize;
-      font-feature-settings: "calt" off, "kern" off;
+      font-feature-settings: "calt"off, "kern"off;
     }
+
     &.active p {
       color: #7eb942;
     }
+
     &:last-child {
       margin-bottom: 0;
     }
   }
 }
+
 .progress-main-section {
   padding: 25px 0;
+
   h5 {
     font-weight: 500;
     font-size: 18px;
@@ -345,24 +410,29 @@ body {
     text-transform: capitalize;
     margin-bottom: 15px;
   }
+
   .progress-bar-inner {
     margin-bottom: 9px;
+
     &:last-child {
       margin-bottom: 0;
     }
+
     .progressLabel {
       margin-bottom: 5px;
+
       h6,
       p {
         font-weight: 400;
         font-size: 15px;
         line-height: 24px;
         text-transform: capitalize;
-        font-feature-settings: "calt" off, "kern" off;
-        color: #e3e3e3;
+        font-feature-settings: "calt"off, "kern"off;
+        color: $Text_color_2;
         margin: 0;
       }
     }
+
     .progressVisualFull {
       display: flex;
       height: 8px;
@@ -373,6 +443,7 @@ body {
       align-items: center;
       padding: 2px;
     }
+
     .progressVisualPart {
       transition: width 2s;
       background-color: $Second_color;
@@ -380,9 +451,11 @@ body {
     }
   }
 }
+
 .extra-skills-section {
   .extra-skills-inner-section {
     padding: 25px 0;
+
     h5 {
       font-weight: 500;
       font-size: 18px;
@@ -390,31 +463,37 @@ body {
       text-transform: capitalize;
       margin-bottom: 15px;
     }
+
     ul {
       li {
         margin-bottom: 5px;
         gap: 15px;
+
         &:last-child {
           margin-bottom: 0;
         }
+
         svg {
           color: $Second_color;
         }
+
         p {
           font-weight: 400;
           font-size: 15px;
           line-height: 24px;
           text-transform: capitalize;
-          font-feature-settings: "calt" off, "kern" off;
+          font-feature-settings: "calt"off, "kern"off;
           color: $Text_color_2;
         }
       }
     }
   }
 }
+
 .cv-button {
   padding-top: 25px;
 }
+
 .ct-cv-button {
   border-radius: 0;
   padding: 11px;
@@ -429,11 +508,9 @@ body {
   justify-content: center;
   gap: 19px;
   border: 1px solid $Second_color;
-  background-image: -webkit-linear-gradient(
-    30deg,
-    $Second_color 50%,
-    transparent 50%
-  );
+  background-image: -webkit-linear-gradient(30deg,
+      $Second_color 50%,
+      transparent 50%);
   background-image: linear-gradient(30deg, $Second_color 50%, transparent 50%);
   background-size: 500px;
   background-repeat: no-repeat;
@@ -441,6 +518,7 @@ body {
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
   background-color: $Second_color;
+
   &:hover {
     border: 1px solid $Second_color;
     background-color: transparent;
@@ -448,10 +526,12 @@ body {
     color: $Second_color;
   }
 }
+
 .ct-hr {
   opacity: 0.5;
   border-color: $Bg_Dark_color_3;
 }
+
 /* -------------------------------- Profile Main Page CSS End -------------------------------- */
 /* -------------------------------- Home main section CSS Start -------------------------------- */
 
@@ -461,31 +541,36 @@ body {
   justify-content: center;
   background-color: $Bg_Dark_color;
   position: relative;
+
   .home-main-box {
     max-width: 500px;
     margin: 0 auto;
+
     h1 {
       font-weight: 700;
       font-size: 48px;
       line-height: 123.6%;
       color: $White_color;
       margin-bottom: 31px;
+
       span {
         color: $Second_color;
       }
     }
+
     p {
       font-weight: 400;
       font-size: 16px;
       line-height: 24px;
       text-align: center;
       text-transform: capitalize;
-      font-feature-settings: "calt" off, "kern" off;
+      font-feature-settings: "calt"off, "kern"off;
       color: $Text_color_2;
       margin-bottom: 50px;
     }
   }
 }
+
 .home-animation-main {
   .home-animation {
     width: 16px;
@@ -493,11 +578,13 @@ body {
     position: absolute;
     border: 2px solid rgba(255, 180, 0, 0.8);
     border-radius: 50%;
+
     &.home-animation-1 {
       top: 30px;
       left: 30px;
       animation: HomeAnimation 2s infinite linear alternate;
     }
+
     &.home-animation-2 {
       top: 52px;
       left: 50%;
@@ -505,6 +592,7 @@ body {
       animation: HomeAnimation 3s infinite linear alternate;
       animation-delay: 1.5s;
     }
+
     &.home-animation-3 {
       top: 70px;
       right: 53px;
@@ -512,6 +600,7 @@ body {
       animation: HomeAnimation 2s infinite linear alternate;
       animation-delay: 1s;
     }
+
     &.home-animation-4 {
       bottom: 24px;
       right: 33px;
@@ -522,12 +611,14 @@ body {
       animation: HomeAnimation 3s infinite linear alternate;
       animation-delay: 1.5s;
     }
+
     &.home-animation-5 {
       bottom: 57px;
       right: 40%;
       animation: HomeAnimation 2s infinite linear alternate;
       animation-delay: 1s;
     }
+
     &.home-animation-6 {
       bottom: 30%;
       left: 30%;
@@ -536,6 +627,7 @@ body {
       animation: HomeAnimation 3s infinite linear alternate;
       animation-delay: 1.5s;
     }
+
     &.home-animation-7 {
       bottom: 29px;
       left: 88px;
@@ -543,16 +635,19 @@ body {
       animation: HomeAnimation 2s infinite linear alternate;
       animation-delay: 1s;
     }
+
     @keyframes HomeAnimation {
       0% {
         transform: translateY(0);
       }
+
       100% {
         transform: translateY(10px);
       }
     }
   }
 }
+
 .ct-hire-me-button {
   background: $Second_color;
   border-radius: 5px;
@@ -576,9 +671,11 @@ body {
   min-width: 154px;
   justify-content: center;
   gap: 11px;
+
   svg {
     width: 18px;
   }
+
   &:hover {
     border: 1px solid $Second_color;
     background-color: transparent;
@@ -588,3 +685,165 @@ body {
 }
 
 /* -------------------------------- Home main section CSS End -------------------------------- */
+/* -------------------------------- Service main section CSS Start -------------------------------- */
+
+.service-main-section {
+  padding-right: 20px;
+
+  .service-box-inner {
+    .card {
+      background-color: $Bg_Dark_color;
+      border: none;
+      border-radius: 0;
+      color: $White_color;
+      align-items: center;
+      padding: 46px;
+      height: 100%;
+
+      .card-img {
+        border-radius: 0;
+        width: auto;
+        height: auto;
+        margin-bottom: 18px;
+      }
+
+      .card-body {
+        padding: 0;
+
+        .card-title {
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          text-transform: capitalize;
+          margin-bottom: 5px;
+        }
+
+        .card-text {
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+          text-transform: capitalize;
+        }
+      }
+    }
+  }
+}
+
+.title-header-section {
+  .title-header-inner {
+    max-width: 572px;
+    margin: 0 auto;
+    margin-bottom: 28px;
+
+    h1 {
+      font-size: 42px;
+      font-family: Inter;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 123.6%;
+      text-transform: capitalize;
+    }
+
+    p {
+      text-align: center;
+      font-size: 15px;
+      font-family: Inter;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 24px;
+      text-transform: capitalize;
+    }
+  }
+}
+
+/* -------------------------------- Service main section CSS End -------------------------------- */
+/* -------------------------------- Education main section CSS Start -------------------------------- */
+
+.EducationHistory-main-section {
+  padding: 0 20px;
+
+  .EducationHistory-main-inner {
+    background-color: $Bg_Dark_color;
+    padding: 48px;
+
+    ul {
+      li {
+        padding: 28px 0;
+        border-bottom: 1px solid $Bg_Dark_color_3;
+
+        &:first-child {
+          padding-top: 0;
+        }
+
+        &:last-child {
+          padding-bottom: 0;
+          border: none;
+        }
+
+        .EducationHistory-left {
+          width: 40%;
+          padding-right: 20px;
+
+          h5 {
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 123.6%;
+            text-transform: capitalize;
+            margin-bottom: 25px;
+          }
+
+          .EducationHistory-left-lable {
+            gap: 21px;
+
+            p {
+              font-size: 15px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: 24px;
+              text-transform: capitalize;
+            }
+
+            span {
+              color: $Bg_Dark_color;
+              font-size: 10px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 100.9%;
+              padding: 4px 7px;
+              border-radius: 1px;
+              background-color: $Second_color;
+            }
+          }
+        }
+
+        .EducationHistory-right {
+          width: 60%;
+
+          h5 {
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 123.6%;
+            text-transform: capitalize;
+            margin-bottom: 10px;
+          }
+
+          p {
+            font-size: 15px;
+            font-family: Inter;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 24px;
+            text-transform: capitalize;
+            color: $Text_color_2;
+          }
+        }
+      }
+    }
+  }
+}
+
+/* -------------------------------- Education main section CSS End -------------------------------- */
